5. Restaurant App/css/styles.css
@charset "utf-8";

/* CSS Document */

body,
td,
th,
p {
  font-family: "Roboto", Helvetica, sans-serif;
  font-size: 10pt;
  color: #333;
  line-height: 1.5;
}

body {
  background-color: #fdfdfd;
  margin: 0;
  position: relative;
}

ul,
li {
  font-family: "Roboto", Helvetica, sans-serif;
  font-size: 10pt;
  color: #333;
}

a {
  color: orange;
  text-decoration: none;
}

a:hover,
a:focus {
  color: #3397db;
  text-decoration: none;
}

a img {
  border: none 0px #fff;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Roboto", Helvetica, sans-serif;
  margin: 0 0 20px;
}

article,
aside,
canvas,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}

#maincontent {
  background-color: #f3f3f3;
  min-height: 100%;
  width: 100vw;
  display: flex;
  flex-direction: column;
  position: relative;
}

#footer {
  background-color: #174375;
  color: rgb(204, 204, 204);
  font-size: 4pt;
  letter-spacing: 1px;
  padding: 2px;
  text-align: center;
  text-transform: uppercase;
}

/* ====================== Navigation ====================== */

nav {
  width: 100%;
  height: 90px;
  background-image: linear-gradient(to bottom right, #252831, #303a58);
  text-align: center;
  align-items: center;
}

nav h1 {
  margin: auto;
  padding: 25px 20px;
}

nav h1 a {
  color: rgb(255, 255, 255);
  font-weight: 200;
  font-size: 1em;
  letter-spacing: 10px;
  text-transform: uppercase;
  padding-top: 20%;
  font-family: "Allerta Stencil", sans-serif"
}

#breadcrumb {
  padding: 10px 40px 16px;
  list-style: none;
  background-color: #eee;
  font-size: 17px;
  margin: 0;
  max-width: 100%;
}

/* Display list items side by side */

#breadcrumb li {
  display: inline;
}

/* Add a slash symbol (/) before/behind each list item */

#breadcrumb li + li:before {
  padding: 8px;
  color: black;
  content: "/\00a0";
}

/* Add a color to all links inside the list */

#breadcrumb li a {
  color: #174375;
  text-decoration: none;
}

/* Add a color on mouse-over */

#breadcrumb li a:hover {
  color: #01447e;
  text-decoration: underline;
}

/* ====================== Map ====================== */

#map {
  height: 450px;
  width: 100%;
  background-color: #ccc;
  text-align: center;
}

.map-aria-description {
  display: none;
}

/* ====================== Restaurant Filtering ====================== */

.filter-options {
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 100%;
  height: 50px;
  background-color: #174375;
  align-items: center;
  padding: 15px 0;
}

.filter-options h2 {
  color: white;
  font-size: 1rem;
  font-weight: normal;
  line-height: 1;
  margin: 0 20px;
}



.filter-options select {
  background-color: white;
  border: 1px solid #fff;
  font-family: "Roboto", sans-serif;
  font-size: 11pt;
  height: 35px;
  letter-spacing: 0;
  margin: 2px;
  padding: 0 2px;
}

.filter-label {
  color: white;
}

.containerHub{
  width: 100px;
}
/* ====================== Restaurant Listing ====================== */

#restaurants-list {
  background-color: #d1d1d1;
  list-style: outside none none;
  margin: 0;
  padding: 30px 15px 60px;
  text-align: center;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
}

#restaurants-list li {
  border: 2px solid rgb(223, 223, 223);
  background-color: #ffffff;
  font-family: "Roboto", sans-serif;
  margin: 15px;
  min-height: 380px;
  padding: 0 30px 25px;
  text-align: left;
  min-width: 270px;
  max-width: 300px;
}

#restaurants-list .restaurant-img {
  background-color: #ccc;
  display: block;
  margin: 0;
  max-width: 100%;
  min-height: 248px;
  min-width: 100%;
  margin-top: 20px;
}

#restaurants-list li h1 {
  color: #174375;
  background-color: #eee
  font-family: "Roboto", sans-serif;
  font-size: 14pt;
  font-weight: 200;
  letter-spacing: 0;
  line-height: 1.3;
  margin: 20px 0 10px;
  text-transform: uppercase;
}

#restaurants-list p {
  margin: 0;
  font-size: 11pt;
}

#restaurants-list li a {
  background-color: #174375;
  border-bottom: 3px solid #eee;
  color: #fff;
  display: inline-block;
  font-size: 10pt;
  margin: 15px 0 0;
  padding: 8px 30px 10px;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  border-radius: 25px;
}

/* ====================== Restaurant Details ====================== */

.inside header {
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 1000;
}

.inside #map-container {
  background: blue none repeat scroll 0 0;
  height: 87%;
  position: fixed;
  right: 0;
  top: 80px;
  width: 50%;
}

.inside #map {
  background-color: #ccc;
  height: 100%;
  width: 100%;
}

.inside #footer {
  bottom: 0;
  position: absolute;
  width: 45%;
}

#restaurant-name {
  color: #174375;
  font-family: "Roboto", sans-serif;
  font-size: 12pt;
  font-weight: 200;
  letter-spacing: 0;
  margin: 30px 5px;
  text-transform: uppercase;
  line-height: 1.1;
  height: 30px;
  margin-top: 5em;
}

#restaurant-img {
  width: 90%;
}

#restaurant-address {
  font-size: 18px;
  font-weight: 700;
  margin: 10px 0px;
}

#restaurant-cuisine {
  background-color: #333;
  color: #ddd;
  font-size: 12pt;
  font-weight: 300;
  letter-spacing: 10px;
  margin: 0 0 20px;
  padding: 2px 0;
  text-align: center;
  text-transform: uppercase;
  width: 90%;
}

#restaurant-container,
#reviews-container {
  border-bottom: 1px solid #d9d9d9;
  border-top: 1px solid #fff;
  padding: 140px 20px 30px;
  width: 45%;
}

#restaurant-container {
  display: flex;
  flex-direction: column;
}

#reviews-container h2 {
  color: #174375;
  font-size: 24pt;
  font-weight: 300;
  letter-spacing: -1px;
  padding-bottom: 1pt;
}

#reviews-list {
  margin: 0;
  padding: 0;
}

#reviews-list li {
  background-color: #fff;
  border: 2px solid #f3f3f3;
  list-style-type: none;
  margin: 0 0 30px;
  overflow: hidden;
  position: relative;
  width: 85%;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  padding: 0.5em;
}

#reviews-list li > p:nth-child(1) {
  width: 50%;
  font-weight: bolder;
  align-self: center;
  color: #174375;
}

#reviews-list li > p:nth-child(2) {
  align-self: center;
  width: 50%;
  font-weight: bolder;
  text-align: right;
  color: black;
}

#reviews-list li > p:nth-child(3) {
  width: 100%;
  font-weight: bolder;
  color: #174375;
}

#restaurant-hours td {
  font-weight: bolder;
  color: #666;
}

/* ====================== Responsive media queries ====================== */

@media only screen and (max-width: 749px) {
  #restaurants-list li {
    max-width: 100%;
  }

  .inside {
    display: flex;
    flex-direction: row;
    width: 100vw;
  }

  .inside header {
    order: 0;
    width: 100vw;
  }

  header {
    display: flex;
    flex-direction: column;
  }

  header nav {
    order: 0;
  }

  header #breadcrumb {
    order: 1;
    width: 100vw;
    padding-right: 0;
    padding-left: 0;
    text-align: center;
  }

  .inside #map-container {
    top: 130px;
    position: relative;
    height: 300px;
    width: 100vw;
  }

  .inside #restaurant-container {
    position: relative;
    width: 100vw;
    padding: 140px 5px 0 0;
    margin: auto;
    text-align: center;
  }

  .inside #reviews-container {
    width: 100vw;
    padding: 5px;
    margin: auto;
  }

  .inside #footer {
    width: 100vw;
    padding-left: 0;
    padding-right: 0;
    padding-top: 10px;
  }

  #reviews-list {
    width: 100vw;
  }

  #reviews-container h2 {
    text-align: center;
  }
}

@media only screen and (min-width: 750px) {
  #restaurants-list li {
    max-width: 45%;
  }
}

@media only screen and (min-width: 1000px) {
  #restaurants-list li {
    max-width: 300px;
  }
}

